--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-token=MTAwNjEzMzg4MTQwMzA4NDg2MA.GHcEVf.V0B8dfjLqqcuV7eEOq1-OdXL5F4Vfe6wor65ZU
+token=MTExNTYxMjAxNTUyMDY2NTcwMA.GLIf2Z.yD6Ldcv2_0oXlaOpSnNiSkb8yo7uSZANAA89C4
